# hello-world

./: .gitignore  .gitmodules
.github/workflows/: blank.yml  cr.yml
algorithmic_exercises/: bracket_combinations.cpp  build.sh
algorithmic_exercises/binary_tree/: balanced-binary-tree.cpp  binary_tree.hpp  is_same_tree.cpp  traversal_breadth_first.cpp  traversal_depth_first_inorder.cpp  traversal_depth_first_postorder.cpp  traversal_depth_first_preorder.cpp
algorithmic_exercises/binary_tree/tree_depth/: main.cpp  test  test^C
algorithmic_exercises/linked_list/: find_cycle.cpp  linked_list.hpp
arduino/libraries/TM74HC595-4dig-display-master/examples/TM74HC595Display/: TM74HC595Display.ino
arduino/smart_fan/: smart_fan.ino
c_class/: CMakeLists.txt
c_class/creator/: c_class.files  c_class.includes
c_class/include/: class.h
c_class/src/: class.c
c_class/tests/: CMakeLists.txt  test_class_unity.c
cpp_intro/: class_example.cpp  func_example.cpp
cpp_modules/: build.sh  hello.cpp  main.cpp
cpp_modules/gcm.cache/: helloworld.gcm
libpq_example/: main.c
prime_numbers/simple_generator/: CMakeLists.txt
prime_numbers/simple_generator/src/: main.cpp  prime_numbers_generator.cpp  prime_numbers_generator.h
program_options/: build.sh  main.cpp
stacktrace_test/: build.sh  stacktrace_test.cpp
stacktrace_test/stacktrace_test/: CMakeLists.txt  main.cpp
stl_examples/: build.sh  max_heap_example.cpp  min_heap_example.cpp  shared_ptr.cpp
telegram_bot/: bot.py
tests_example/: CMakeLists.txt  README.md
tests_example/include/: lib.h
tests_example/src/: lib.c
tests_example/tests/: CMakeLists.txt  test_func.c  test_func_gtest.cpp
